bhotekoshisukute/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
        --primary-color: #ffcd00;
        --secondary-color: #8a6b2d;
        --green-color: #0f8301;
        --water-color: #2288c2;
      
@layer base {
    body {
        max-width: 100vw;
        overflow-x: hidden;
       font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;
    }

    .bg-gradient {
        background-image: linear-gradient(108deg, #C79D4F 22%, #FAD694 55%, #FAD694 55%, #E9C279 80%);
        /* background: #C79D4F; */
    }

  }
}

    .material-symbols-outlined {
    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
    }

    /* Swiper active slide zoom effect */
    .accommodations-swiper .swiper-slide {
        transform: scale(0.90);
        opacity: 0.85;
        transition: transform 0.3s, box-shadow 0.3s, opacity 0.3s;
        z-index: 1;
    }
    .accommodations-swiper .swiper-slide-active {
        transform: scale(1.02);
        box-shadow: 0 8px 32px rgba(17, 147, 212, 0.18), 0 2px 8px rgba(0, 0, 0, 0.08);
        opacity: 1;
        z-index: 2;
    }

